@@ -18,7 +18,6 @@
  * along with KKEditQT.  If not, see <http://www.gnu.org/licenses/>.
  */
 
-#include <QtGui>
 #include <QApplication>
 #include <QProgressDialog>
 #include <QFile>
