@@ -19,6 +19,10 @@
  */
 
 #include "QT_document.h"
+#ifndef moc_QT_document
+#include "moc_QT_document.cpp"
+#define moc_QT_document
+#endif
 
 int DocumentClass::getCurrentLineNumber(void)
 {
@@ -785,7 +789,11 @@ void DocumentClass::dragMoveEvent(QDragMoveEvent *event)
 	if((event->mimeData()->hasUrls()==true) || (event->mimeData()->hasText()==true))
 		{
 			event->accept();
+#ifdef _USEQT6_
+			cursor=this->cursorForPosition(event->position().toPoint());
+#else
 			cursor=this->cursorForPosition(event->pos());
+#endif
 			this->setTextCursor(cursor);
 		}
 	else
@@ -813,7 +821,11 @@ void DocumentClass::dropEvent(QDropEvent* event)
 							QString			content=QString::fromUtf8(file.readAll());
 							QMimeDatabase	db;
 							QTextCursor		cursor;
+#ifdef _USEQT6_
+							cursor=this->cursorForPosition(event->position().toPoint());
+#else
 							cursor=this->cursorForPosition(event->pos());
+#endif
 							cursor.beginEditBlock();
 								cursor.insertText(content);
 								this->setFilePrefs();
@@ -837,9 +849,12 @@ void DocumentClass::dropEvent(QDropEvent* event)
 
 void DocumentClass::setBMFromLineBar(QMouseEvent *event)
 {
-	QPoint		pos(event->x(),event->y());
-	QTextCursor	cursor=this->cursorForPosition(pos);
-
+	QTextCursor	cursor;
+#ifdef _USEQT6_
+			cursor=this->cursorForPosition(event->position().toPoint());
+#else
+			cursor=this->cursorForPosition(event->pos());
+#endif
 	this->mainKKEditClass->handleBMMenu(this,TOGGLEBOOKMARKMENUITEM,cursor);
 	this->highlightCurrentLine();
 }
