@@ -27,6 +27,7 @@ class LineNumberArea;
 class Highlighter;
 
 enum {NORMALTAB=0,CHANGEDONDISKTAB,IGNORECHANGEDONDISKTAB,LOCKEDTAB,DIRTYTAB};
+//enum xvxvx {jjj,lll,lll};
 
 class DocumentClass : public QPlainTextEdit
 {
@@ -35,7 +36,6 @@ class DocumentClass : public QPlainTextEdit
 	public:
 		explicit DocumentClass(KKEditClass *kk,QWidget *parent=0);
 		~DocumentClass();
-
 
 		KKEditClass						*mainKKEditClass=NULL;
 //highlighting
