@@ -11,6 +11,8 @@ fi
 cd "KKEditQT/src"
 
 rm moc_* &>/dev/null||true
+csrclst=$(echo "../src/*.c" "../src/*.cpp")
+echo COMMONSRC = $csrclst > ../sources
 
 $MOCPATH KKEditClass.h -o moc_KKEditClass.cpp
 while read
@@ -19,8 +21,5 @@ while read
 		outfile=moc_${outfile%*.h}.cpp
 		$MOCPATH $REPLY -o $outfile
 	done < <(find -name "*QT*.h")
-
-csrclst=$(echo "../src/*.c" "../src/*.cpp")
-echo COMMONSRC = $csrclst > ../sources
 
 exit 0
